# IDF_WifiManager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
components/WifiManager/: CMakeLists.txt  Kconfig
components/WifiManager/Code/: app_FreeRTOS.c  app_http_server.c  app_nvs.c  app_wifi.c
components/WifiManager/Includes/: app_FreeRTOS.h  app_http_server.h  app_nvs.h  app_wifi.h
components/WifiManager/Web/: app.js  index.html  password.html  password.js  scan.css
components/WifiManager/Web/original/: app.css  app.js  index.html
main/: main.c
